вторая страница, цвет и шрифт

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- navigator-->
     <header>
       <nav>
-        <ul>
-          <li>
-            <a href="">Web studio</a>
-          </li>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a class="logo" href="">Web <span class="part-logo">studio</span></a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="" class="link  main">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--contact-->
-      <ul>
+      <ul class="nav-registration list">
         <li>
           <a href="mailto:top.stylist.ua@gmail.com">top.stylist.ua@gmail.com</a>
         </li>
@@ -29,7 +30,7 @@
     <main>
       <h1>Наши проекты</h1>
       <!-- фильтр кнопки-->
-      <ul>
+      <ul class="list">
         <li><button type="button">Все</button></li>
         <li><button type="button">Веб-сайты</button></li>
         <li><button type="button">Приложения</button></li>
@@ -37,13 +38,13 @@
         <li><button type="button">Маркетинг</button></li>
       </ul>
 
-      <ul>
+      <ul class="project list">
         <li>
           <a href="">
             <img src="./image/project1.jpg" alt="technokrack" width="370" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
-            <p>
+            <h2 class="title">Технокряк</h2>
+            <p class="text"> Веб-сайт</p>
+            <p class="description">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -53,9 +54,9 @@
         <li>
           <a href="">
             <img src="./image/project2.jpg" alt="technokrack" width="370" />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-            <p>
+            <h2  class="title">Постер New Orlean vs Golden Star</h2>
+            <p class="text">Дизайн</p>
+            <p class="description" >
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -65,9 +66,9 @@
         <li>
           <a href="">
             <img src="./image/project3.jpg" alt="technokrack" width="370" />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
-            <p>
+            <h2 class="title">Ресторан Seafood</h2>
+            <p class="text">Приложение</p>
+            <p class="description" >
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -76,9 +77,9 @@
         </li>
         <a href="">
             <img src="./image/project4.jpg" alt="technokrack" width="370" />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
-            <p>
+            <h2 class="title">Проект Prime</h2>
+            <p class="text">Маркетинг</p>
+            <p class="description" >
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак на
                 защищённые сервера конкурентов.
@@ -87,9 +88,9 @@
         </li>
         <a href="">
             <img src="./image/project5.jpg" alt="technokrack" width="370" />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
-            <p>
+            <h2 class="title">Проект Boxes</h2>
+            <p class="text">Приложение</p>
+            <p class="description" >
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак на
                 защищённые сервера конкурентов.
@@ -97,9 +98,9 @@
         </a>
         </li><a href="">
             <img src="./image/project6.jpg" alt="technokrack" width="370" />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-            <p>
+            <h2 class="title">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p>
+            <p class="description" >
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак на
                 защищённые сервера конкурентов.
@@ -107,9 +108,9 @@
         </a>
         </li><a href="">
             <img src="./image/project7.jpg" alt="technokrack" width="370" />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
-            <p>
+            <h2 class="title">Издание Limited Edition</h2>
+            <p class="text">Дизайн</p>
+            <p class="description" >
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак на
                 защищённые сервера конкурентов.
@@ -117,9 +118,9 @@
         </a>
         </li><a href="">
             <img src="./image/project8.jpg" alt="technokrack" width="370" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
-            <p>
+            <h2 class="title">Проект LAB</h2>
+            <p class="text">Маркетинг</p>
+            <p class="description" >
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак на
                 защищённые сервера конкурентов.
@@ -127,9 +128,9 @@
         </a>
         </li><a href="">
             <img src="./image/project9.jpg" alt="technokrack" width="370" />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
-            <p>
+            <h2 class="title">Growing Business</h2>
+            <p class="text">Приложение</p>
+            <p class="description" >
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак на
                 защищённые сервера конкурентов.
@@ -138,26 +139,27 @@
         </li>
       </ul>
     </main>
-    <footer>
-        <address>
-            <a href="">Web studio</a> <br />
-            г. Киев, пр-т Леси Украинки, 26 <br />
-            <a href="mailto:info@example.com">info@example.com</a> <br />
-            <a href="tel:+380991111111">+380991111111</a> <br />
-        </address>
+    <footer class="footer">
+      <address class="adres">
+        <a class="logo" href="">Web <span class="logo-footer"> studio</span></a>
+        <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+        <a class="link" href="mailto:info@example.com">info@example.com</a>
+        <a class="link" href="tel:+380991111111">+380991111111</a>
+      </address>
     
-        <div>
-            <b>присоединяйтесь</b>
-            <ul>
-                <li><a href="">instagram</a></li>
-                <li><a href="">twitter</a></li>
-                <li><a href="">facebook</a></li>
-                <li><a href="">linkedin</a></li>
-            </ul>
-        </div>
-        <div>
-            <b>Подпишитесь на рассылку</b>
-        </div>
+      <div>
+        <b class="contact">Присоединяйтесь</b>
+        <ul class="list">
+          <li><a href="">instagram</a></li>
+          <li><a href="">twitter</a></li>
+          <li><a href="">facebook</a></li>
+          <li><a href="">linkedin</a></li>
+        </ul>
+      </div>
+      <div>
+        <b class="contact">Подпишитесь на рассылку</b>
+        <p class="button">Подписаться</p>
+      </div>
     </footer>
   </body>
 </html>
