--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- navigator-->
     <header>
       <nav>
-        <ul>
-          <li>
-            <a href="">Web studio</a>
-          </li>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a class="logo" href="">Web <span class="part-logo">studio</span></a>
+        <ul class="site-nav list">
+          <li><a href="" class="link main">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--contact-->
-      <ul>
+      <ul class="nav-registration list">
         <li>
           <a href="mailto:top.stylist.ua@gmail.com">top.stylist.ua@gmail.com</a>
         </li>
@@ -28,82 +28,83 @@
       </ul>
     </header>
     <main>
+      <!--hero-->
       <div>
         <!-- forma order-->
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <a href="">заказать услугу</a>
+        <section class="hero">
+          <h1 class="title"> Эффективные решения для вашего бизнеса</h1>
+          <a class="button" href="">заказать услугу</a>
         </section>
       </div>
-      <section>
+      <section class="section">
         <!--our qualities-->
-        <h2>Сильные стороны</h2>
-        <ul>
+        <h2 class="section-title">Сильные стороны</h2>
+        <ul class="strong-side list">
           <li>
             <img src="./image/antenna.svg" alt="антена" />
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <img src="./image/clock1.svg" alt="часы" />
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title" > Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <img src="./image/diagram1.svg" alt="диаграмма" />
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <img src="./image/astronaut.svg" alt="астронафт" />
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
-      </section>
+      </section class="section">
       <!--product -->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="our-profile list">
           <li>
             <img src="./image/laptop.jpg" alt="ноутбук" width="370" />
-            <h3>Десктопные приложения</h3>
+            <h3 class="title">Десктопные приложения</h3>
           </li>
           <li>
             <img src="./image/phone.jpg" alt="телефон" width="370" />
-            <h3>Мобильные приложения</h3>
+            <h3 class="title">Мобильные приложения</h3>
           </li>
           <li>
             <img src="./image/desktop.jpg" alt="компьютер" width="370" />
-            <h3>Дизайнерские решения</h3>
+            <h3 class="title">Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
       <!-- our team-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./image/nikolay-kucheryavenko.jpg"
               alt="джон"
               width="270"
             />
-            <h3>Николай Кучеренко</h3>
-            <p>Product Designer</p>
-            <ul>
+            <h3 class="team-title">Николай Кучеренко</h3>
+            <p class="text">Product Designer</p>
+            <ul class="list">
               <li><a href="">instagram</a></li>
               <li><a href="">twitter</a></li>
               <li><a href="">facebook</a></li>
@@ -113,9 +114,9 @@
 
           <li>
             <img src="./image/olga-ivanova.jpg" alt="марта" width="270" />
-            <h3>Ольга Иванова</h3>
-            <p>Frontend Developer</p>
-            <ul>
+            <h3 class="team-title">Ольга Иванова</h3>
+            <p class="text"> Frontend Developer</p>
+            <ul class="list">
               <li><a href="">instagram</a></li>
               <li><a href="">twitter</a></li>
               <li><a href="">facebook</a></li>
@@ -124,9 +125,9 @@
           </li>
           <li>
             <img src="./image/andrey-shevchenko.jpg" alt="роберт" width="270" />
-            <h3>Андрей Шевченко</h3>
-            <p>Marketing</p>
-            <ul>
+            <h3 class="team-title">Андрей Шевченко</h3>
+            <p class="text">Marketing</p>
+            <ul class="list">
               <li><a href="">instagram</a></li>
               <li><a href="">twitter</a></li>
               <li><a href="">facebook</a></li>
@@ -135,9 +136,9 @@
           </li>
           <li>
             <img src="./image/ivan-nikolaev.jpg" alt="мартин" width="270" />
-            <h3>Иван Николаев</h3>
-            <p>UI Designer</p>
-            <ul>
+            <h3 class="team-title">Иван Николаев</h3>
+            <p class="text">UI Designer</p>
+            <ul class="list">
               <li><a href="">instagram</a></li>
               <li><a href="">twitter</a></li>
               <li><a href="">facebook</a></li>
@@ -147,9 +148,9 @@
         </ul>
       </section>
       <!-- our client-->
-      <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="list">
           <li>
             <a href=""><img src="./image/client1.svg" alt="клиент1" /></a>
           </li>
@@ -171,17 +172,17 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <address>
-        <a href="">Web studio</a> <br />
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="mailto:info@example.com">info@example.com</a> <br />
-        <a href="tel:+380991111111">+380991111111</a> <br />
+    <footer class="footer">
+      <address class="adres">
+        <a class="logo" href="">Web <span class="logo-footer"> studio</span></a> 
+        <p class="text">г. Киев, пр-т Леси Украинки, 26</p> 
+        <a class="link" href="mailto:info@example.com">info@example.com</a> 
+        <a class="link" href="tel:+380991111111">+380991111111</a> 
       </address>
 
       <div>
-        <b>присоединяйтесь</b>
-        <ul>
+        <b class="contact">Присоединяйтесь</b>
+        <ul class="list">
           <li><a href="">instagram</a></li>
           <li><a href="">twitter</a></li>
           <li><a href="">facebook</a></li>
@@ -189,7 +190,8 @@
         </ul>
       </div>
       <div>
-        <b>Подпишитесь на рассылку</b>
+        <b class="contact">Подпишитесь на рассылку</b>
+        <p class="button">Подписаться</p>
       </div>
     </footer>
   </body>
